// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`brute force Function _obj => path(pathInput, _obj) | Null null 1`] = `
Object {
  "error": Object {
    "message": "null is not a list",
    "type": "Error",
  },
  "inputs": Array [
    [Function],
    null,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read property 'length' of null",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Function _obj => path(pathInput, _obj) | Undefined undefined 1`] = `
Object {
  "error": Object {
    "message": "undefined is not a list",
    "type": "Error",
  },
  "inputs": Array [
    [Function],
    undefined,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read property 'length' of undefined",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Function x => "" | Null null 1`] = `
Object {
  "error": Object {
    "message": "null is not a list",
    "type": "Error",
  },
  "inputs": Array [
    [Function],
    null,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read property 'length' of null",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Function x => "" | Undefined undefined 1`] = `
Object {
  "error": Object {
    "message": "undefined is not a list",
    "type": "Error",
  },
  "inputs": Array [
    [Function],
    undefined,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read property 'length' of undefined",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Function x => false | Null null 1`] = `
Object {
  "error": Object {
    "message": "null is not a list",
    "type": "Error",
  },
  "inputs": Array [
    [Function],
    null,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read property 'length' of null",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Function x => false | Undefined undefined 1`] = `
Object {
  "error": Object {
    "message": "undefined is not a list",
    "type": "Error",
  },
  "inputs": Array [
    [Function],
    undefined,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read property 'length' of undefined",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Function x => true | Null null 1`] = `
Object {
  "error": Object {
    "message": "null is not a list",
    "type": "Error",
  },
  "inputs": Array [
    [Function],
    null,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read property 'length' of null",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Function x => true | Undefined undefined 1`] = `
Object {
  "error": Object {
    "message": "undefined is not a list",
    "type": "Error",
  },
  "inputs": Array [
    [Function],
    undefined,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read property 'length' of undefined",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Function x => x + 1 | Null null 1`] = `
Object {
  "error": Object {
    "message": "null is not a list",
    "type": "Error",
  },
  "inputs": Array [
    [Function],
    null,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read property 'length' of null",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Function x => x + 1 | Undefined undefined 1`] = `
Object {
  "error": Object {
    "message": "undefined is not a list",
    "type": "Error",
  },
  "inputs": Array [
    [Function],
    undefined,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read property 'length' of undefined",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Null null | Array [/foo/g, /foo/g] 1`] = `
Object {
  "error": Object {
    "message": "predicate is not a function",
    "type": "TypeError",
  },
  "inputs": Array [
    null,
    Array [
      /foo/g,
      /foo/g,
    ],
  ],
  "label": "errors messages are different",
  "ok": false,
  "ramdaError": Object {
    "message": "pred is not a function",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Null null | Array [{"a":"{\\"b\\":1}"}, {"a":"{\\"b\\":1}"}] 1`] = `
Object {
  "error": Object {
    "message": "predicate is not a function",
    "type": "TypeError",
  },
  "inputs": Array [
    null,
    Array [
      Object {
        "a": Object {
          "b": 1,
        },
      },
      Object {
        "a": Object {
          "b": 1,
        },
      },
    ],
  ],
  "label": "errors messages are different",
  "ok": false,
  "ramdaError": Object {
    "message": "pred is not a function",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Null null | Null null 1`] = `
Object {
  "error": Object {
    "message": "null is not a list",
    "type": "Error",
  },
  "inputs": Array [
    null,
    null,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read property 'length' of null",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Null null | Undefined undefined 1`] = `
Object {
  "error": Object {
    "message": "undefined is not a list",
    "type": "Error",
  },
  "inputs": Array [
    null,
    undefined,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read property 'length' of undefined",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Undefined undefined | Array [/foo/g, /foo/g] 1`] = `
Object {
  "error": Object {
    "message": "predicate is not a function",
    "type": "TypeError",
  },
  "inputs": Array [
    undefined,
    Array [
      /foo/g,
      /foo/g,
    ],
  ],
  "label": "errors messages are different",
  "ok": false,
  "ramdaError": Object {
    "message": "pred is not a function",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Undefined undefined | Array [{"a":"{\\"b\\":1}"}, {"a":"{\\"b\\":1}"}] 1`] = `
Object {
  "error": Object {
    "message": "predicate is not a function",
    "type": "TypeError",
  },
  "inputs": Array [
    undefined,
    Array [
      Object {
        "a": Object {
          "b": 1,
        },
      },
      Object {
        "a": Object {
          "b": 1,
        },
      },
    ],
  ],
  "label": "errors messages are different",
  "ok": false,
  "ramdaError": Object {
    "message": "pred is not a function",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Undefined undefined | Null null 1`] = `
Object {
  "error": Object {
    "message": "null is not a list",
    "type": "Error",
  },
  "inputs": Array [
    undefined,
    null,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read property 'length' of null",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Undefined undefined | Undefined undefined 1`] = `
Object {
  "error": Object {
    "message": "undefined is not a list",
    "type": "Error",
  },
  "inputs": Array [
    undefined,
    undefined,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read property 'length' of undefined",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;
